--- a/exercicios/desafio/d012/estilo/style.css
+++ b/exercicios/desafio/d012/estilo/style.css
@@ -1,13 +1,26 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+NZ:wght@100..400&family=Playwrite+PL:wght@100..400&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+PT:wght@100..400&family=Playwrite+SK:wght@100..400&display=swap');
+
+:root {
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: 'Playwrite PT', cursive;
+    --font3: 'Playwrite NZ', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
+    
 }
 
 html, body {
     min-height: 100vh;
     background-color: darkgrey;
+    font-family: var(--font1);
 }
 
 header {
@@ -17,12 +30,15 @@ header {
 }
 
 header > h1 {
-    padding-top: 50px;
+    font-size: 3.5vw;
+    padding-top: 40px;
     font-variant: small-caps;
+    font-family: var(--font2);
 }
 
 header > p {
-    padding-bottom: 50px;
+    font-size: 1.2vw;
+    padding-bottom: 40px;
 }
 
 header a, footer a {
@@ -36,29 +52,46 @@ header a:hover, footer a:hover {
 }
 
 section {
+    font-family: var(--font3);
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-size: 1.7vw;
+}
+
+section > p {
+    padding-bottom: 1em;
 }
 
 section.normal {
-    background-color: white;
+    background-color: rgb(235, 226, 226);
     color: black;
 }
 
 section.imagem {
-    background-color: rgb(43, 39, 39);
+    background-color: rgb(0, 0, 0);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.397);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
-    width: 400px;
-    background-color: rgba(0, 0, 0, 0.185);
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.418);
+    text-shadow: 1px 1px 0px black;
 }
 
-section.normal > p {
-    
+section#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+}
+
+section#img02 {
+    background-image: url(../imagens/background002.jpg);
+    background-position: right center;
 }
 
 footer {
@@ -66,4 +99,5 @@ footer {
     text-align: center;
     color: white;
     padding: 10px;
+    font-size: 1.2vw;
 }
