--- a/exercicios/ex026/mq004/estilos/style.css
+++ b/exercicios/ex026/mq004/estilos/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-/* Todas as demais mídias */
+/* Versão Mobile First */
 
 * {
     font-family: Arial, Helvetica, sans-serif;
@@ -22,7 +22,7 @@ body {
 
 main {
     background-color: rgba(255, 255, 255, 0.829);
-    width: 90vh;
+    width: 400px;
     margin: auto;
     margin-top: 20px;
     border-radius: 10px;
